# lv-logdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README_CN.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: append_bench.rs  perf_test.rs
deploy/: alerts.yml  failover-runbook.md  logdbd.service
deploy/docker/: README.md  docker-compose.yml  logdbd.yaml
deploy/helm/logdbd/: Chart.yaml  values.yaml
deploy/helm/logdbd/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secret-auth.yaml  service.yaml
docs/: upgrade-v0.4.md
docs/en/dev/: README.md  extending.md  project-layout.md  storage-format.md  testing.md
docs/en/usage/: README.md  concepts.md  configuration.md  cookbook.md  errors.md  features.md  recovery.md  sharding.md  tailers.md
docs/superpowers/plans/: 2026-07-02-sqlite-query-cache-plan.md
docs/superpowers/specs/: 2026-07-02-sqlite-query-cache-design.md
docs/zh/: README.md
docs/zh/dev/: architecture.md  contributing.md  extending.md  project-layout.md  testing.md
docs/zh/usage/: README.md  concepts.md  configuration.md  cookbook.md  durability.md  errors.md  features.md  getting-started.md  performance.md  recovery.md  sharding.md  tailers.md  writing.md
examples/: crash_test.rs  perf.rs  soak.rs  testsuite.rs  wal.rs
fuzz/fuzz_targets/: append_roundtrip.rs  segment_header.rs
logdb/: CHANGELOG.md  Cargo.toml  README.md  README_CN.md  THIRDPARTY.md
logdb-broker/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README_CN.md  config.yaml
logdb-broker-proto/: CHANGELOG.md  Cargo.toml  build.rs
logdb-broker-proto/proto/: broker.proto
logdb-broker-proto/src/: lib.rs
logdb-broker/benches/: consume_throughput.rs
logdb-broker/src/: config.rs  coordinator.rs  forwarder.rs  leader.rs  lib.rs  main.rs  persistence.rs  service.rs  sessions.rs
logdb-broker/tests/: consume_e2e.rs  integration.rs
logdb-client/: Cargo.toml  README.md
logdb-client-ts/: README.md  package-lock.json  package.json  tsconfig.json
logdb-client-ts/proto/: broker.proto  logdbd.proto
logdb-client-ts/src/: broker-client.ts  client.ts  index.ts  tail-stream.ts  types.ts
logdb-client/src/: broker.rs  client.rs  lib.rs  record.rs
logdb-client/tests/: integration.rs
logdb-exporter/: Cargo.toml  README.md  exporter.yaml
logdb-exporter/src/: config.rs  lib.rs  main.rs  pipeline.rs  progress.rs  source.rs
logdb-exporter/src/sink/: clickhouse.rs  mod.rs  stdout.rs
logdb-exporter/tests/: integration.rs
logdb/benches/: append_bench.rs  perf_test.rs
logdb/docs/en/: README.md
logdb/docs/en/dev/: architecture.md  building.md  contributing.md  extending.md  testing.md
logdb/docs/en/security/: README.md  key-management.md  threat-model.md
logdb/docs/en/usage/: README.md  async.md  concepts.md  durability.md  features.md  getting-started.md  performance.md  reading.md  tailers.md  writing.md
logdb/docs/zh/dev/: README.md  building.md  storage-format.md  testing.md
logdb/docs/zh/usage/: reading.md  tailers.md
logdb/examples/: crash_test.rs  encryption.rs  perf.rs  read_perf.rs  scan_perf.rs  sharding.rs  soak.rs  tailer_consumer.rs  testsuite.rs  wal.rs
logdb/fuzz/: Cargo.toml
logdb/fuzz/fuzz_targets/: deserialize_record.rs
logdb/scripts/: build.sh  crash-recovery-test.sh  run-all.sh
logdb/src/: config.rs  error.rs  health.rs  lib.rs  observe.rs  pusher.rs  recovery.rs  shard.rs  tailer.rs
logdb/src/pipeline/: committer.rs  mod.rs  sealer.rs  trigger.rs
logdb/src/reader/: iter.rs  mod.rs  scan.rs
logdb/src/ring/: mod.rs  slot.rs
logdb/src/storage/: format.rs  index.rs  mod.rs
logdb/tests/: fuzz.rs  integration.rs
logdbd/: CHANGELOG.md  Cargo.toml  README.md  logdbd.yaml
logdbd-proto/: Cargo.toml  build.rs
logdbd-proto/proto/: logdbd.proto
logdbd-proto/src/: lib.rs
logdbd/docs/zh/dev/: building.md
logdbd/docs/zh/usage/: configuration.md  getting-started.md  query-cache.md
logdbd/proto/: logdbd.proto
logdbd/src/: auth.rs  backup.rs  catalog.rs  config.rs  consumer.rs  lib.rs  main.rs  node.rs  offsets.rs  publisher.rs  query.rs  quota.rs  record.rs  replication.rs  service.rs  snapshot.rs  storage.rs  subscribe.rs  tombstone.rs
logdbd/src/cache/: indexer.rs  mod.rs  query.rs  snapshot.rs
logdbd/src/crypto/: mod.rs  provider.rs
logdbd/tests/: backup.rs  encryption.rs  integration.rs
scripts/: benchmark.sh  build.sh  package.sh  run-all-deployed.sh  soak-test.sh
src/: config.rs  error.rs  health.rs  lib.rs  platform.rs  pusher.rs  record.rs  recovery.rs  shard.rs  tailer.rs
src/pipeline/: committer.rs  sealer.rs  signal.rs  trigger.rs
src/reader/: iter.rs  mod.rs  scan.rs
src/ring/: mod.rs  slot.rs
src/storage/: format.rs  index.rs  mod.rs
tests/: fuzz.rs  integration.rs
