[package]
name = "logdb"
version = "0.2.0"
edition = "2021"
description = "Embedded, append-only, crash-recoverable, optionally tamper-proof local log database"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2"
crc32c = "0.6"
sha2 = { version = "0.10", optional = true }
blake3 = { version = "1", optional = true }
libc = "0.2"
scopeguard = "1"
zstd = { version = "0.13", optional = true, default-features = false }
aes-gcm = { version = "0.10", optional = true, default-features = false, features = ["aes", "alloc"] }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
proptest = "1"
rand = "0.8"

[features]
default = []
hash-chain = ["sha2", "blake3"]
compression = ["zstd"]
encryption = ["aes-gcm", "getrandom"]
remote-push = []

[[bench]]
name = "append_bench"
harness = false
