# lv-logdb — a cargo workspace
#
# Members:
#   logdb             — the embedded append-only log database (the library crate)
#   logdbd            — a clustered gRPC service built on logdb
#   logdb-broker      — Kafka-style consumer-group coordinator for logdbd (cr-037)
#
# The fuzz targets (logdb/fuzz) are excluded from the workspace; they are
# driven by `cargo +nightly fuzz` directly.

[workspace]
resolver = "2"
members = [
  "logdb",
  "logdbd-proto",
  "logdbd",
  "logdb-exporter",
  "logdb-client",
  "logdb-broker-proto",
  "logdb-broker",
]
exclude = ["logdb/fuzz"]

# Workspace-wide lint policy. A few clippy lints are allowed because they cut
# against deliberate, pervasive style in this codebase and firing on every site
# adds noise without value:
#   - field_reassign_with_default: build structs field-by-field after
#     `Default::default()` (config / proto request construction) — clearer than
#     the struct-literal rewrite clippy suggests.
#   - too_many_arguments: constructors/handlers that take many config params —
#     a params struct would hurt readability here.
#   - result_large_err: `Result<_, Status>` / `Result<_, StorageError>` carry a
#     large error type by design (tonic::Status); already allowed per-item in
#     places (e.g. forwarder.rs).
[workspace.lints.clippy]
field_reassign_with_default = "allow"
too_many_arguments = "allow"
result_large_err = "allow"
