[package]
name = "logdb-broker-proto"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Protobuf definitions for logdb-broker — the Kafka-style consumer-group coordinator"
license = "Apache-2.0"
repository = "https://github.com/lv-agent/lv-logdb"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
