[package]
name = "logdb-broker"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Kafka-style consumer-group coordinator (shard assignment + rebalance) for logdbd"
license = "Apache-2.0"
repository = "https://github.com/lv-agent/lv-logdb"

[dependencies]
logdb-broker-proto = { version = "0.1.0", path = "../logdb-broker-proto" }
logdbd-proto = { version = "0.4.0", path = "../logdbd-proto" }
logdbd = { path = "../logdbd" }  # for embedded logdbd mode
logdb = { path = "../logdb" }    # for embedded logdbd mode
tonic = { version = "0.12", features = ["transport"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }

[dev-dependencies]
tempfile = "3"
logdbd = { path = "../logdbd" }
logdb-client = { path = "../logdb-client", features = ["broker"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "consume_throughput"
harness = false

[lints]
workspace = true
