[package]
name = "logdb-client"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"
description = "Rust client SDK for logdbd — the append-only audit log database"
license = "Apache-2.0"
repository = "https://github.com/lv-agent/lv-logdb"

[dependencies]
logdbd-proto = { version = "0.4.0", path = "../logdbd-proto" }
tonic = { version = "0.12", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
# Optional broker SDK (cr-037): enable with the `broker` feature. Keeps the
# default publishable (logdb-broker-proto isn't published yet).
logdb-broker-proto = { version = "0.1.0", path = "../logdb-broker-proto", optional = true }
tokio-stream = { version = "0.1", optional = true }

[features]
default = []
broker = ["dep:logdb-broker-proto", "dep:tokio-stream"]

[dev-dependencies]
logdbd = { version = "0.8.0", path = "../logdbd" }
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tempfile = "3"
logdb = { version = "0.6.0", path = "../logdb" }
