[package]
name = "logdb-exporter"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "CDC exporter for logdbd — Scan + Tail → external sink"
license = "Apache-2.0"
repository = "https://github.com/lv-agent/lv-logdb"

[features]
default = ["clickhouse"]
clickhouse = ["reqwest"]

[dependencies]
logdbd-proto = { version = "0.4.0", path = "../logdbd-proto" }
tonic = { version = "0.12", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"
crc32c = "0.6"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
logdbd = { version = "0.8.0", path = "../logdbd" }
tempfile = "3"
tokio-stream = "0.1"
logdb = { version = "0.6.0", path = "../logdb" }

[lints]
workspace = true
