[package]
name = "logdbd"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "Clustered log service built on logdb"
license = "Apache-2.0"

[dependencies]
logdb = { version = "0.4.0", path = "../logdb", features = ["compression", "encryption", "hash-chain", "metrics", "tracing"] }
logdbd-proto = { path = "../logdbd-proto" }
tonic = { version = "0.12", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic-health = "0.12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
fs2 = "0.4"
crc32c = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
rcgen = { version = "0.13", features = ["pem"] }
