[package]
name = "logdb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"

[dependencies.logdb]
path = ".."

[[bin]]
name = "deserialize_record"
path = "fuzz_targets/deserialize_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "segment_header"
path = "fuzz_targets/segment_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "append_roundtrip"
path = "fuzz_targets/append_roundtrip.rs"
test = false
doc = false
bench = false
